--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "author": "Kyle Andrews <codingwithkyle@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "uuid": "^8.3.2",
     "ws": "^7.4.5"
   },
   "devDependencies": {
