--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cssmonster": "^0.3.1",
     "esbuild": "^0.11.14",
     "esinstall": "^1.1.4",
+    "fuzzysort": "^1.1.4",
     "glob": "^7.1.6",
     "lit-html": "^1.3.0",
     "npm-run-all": "^4.1.5"
@@ -22,7 +23,8 @@
   "bundle": [
     "@codewithkyle/supercomponent",
     "@codewithkyle/router",
-    "lit-html"
+    "lit-html",
+    "fuzzysort"
   ],
   "scripts": {
     "bundle": "node ./build/bundle.js",
